welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:3: error: Int does not take parameters
  for (i <- 0 to nums.length()-1){
                            ^averageValue:6: error: Int does not take parameters
  return somme/nums.length()
                          ^